first iteration of pidgey with ports
